[IMP] account_voucher_check: fixing amount to word spacing

--- a/account_voucher_check/report/account_voucher_check_dot_matrix.css
+++ b/account_voucher_check/report/account_voucher_check_dot_matrix.css
@@ -8,6 +8,7 @@ body {
 
 #document_data{
 	/*padding : 5px;*/
+	padding-top : 15px;
 	width : 100%;
 	height : 185px;/*cambio de 210 a 200*/
 }
@@ -135,3 +136,10 @@ body {
 }
 
  td {border-collapse: collapse; }
+ 
+ .amount_desc {
+	font-family : courier, arial, sans, serif;
+	font-size : 13px;
+	letter-spacing:-1px;
+	word-spacing:-1px;
+ }
